<resources>
    <string name="app_name">Train Ticket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">请先登录</string>
    <string name="nav_header_subtitle">点击上方图标来登录</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_query">查询车次</string>
    <string name="menu_ordered">已购车票</string>
    <string name="menu_account">我的账户</string>
    <string name="menu_other">其他</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_user_id">用户 ID</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_name">姓名</string>
    <string name="prompt_email">电子邮件</string>
    <string name="prompt_phone">电话号码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_jump_sign_in">已有帐号？点击登录</string>
    <string name="action_jump_register">没有账号？点击创建</string>
    <string name="invalid_user_id">请输入合法的用户ID</string>
    <string name="invalid_password_login">请输入符合格式的密码</string>
    <string name="invalid_password_register">密码至少需要6位（允许特殊字符，但不允许空格）</string>
    <string name="invalid_name">姓名中不能包含空白字符</string>
    <string name="invalid_email">请输入正确的电子邮件格式</string>
    <string name="invalid_phone">请输入正确的电话号码格式</string>
    <string name="prompt_value_user_id">用户ID将自动生成&#8230;</string>
    <string name="login_failed">登录失败</string>
    <string name="register_failed">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_success_info">注册成功，您的用户ID为：%1$s，请牢记</string>
    <string name="failed_password_mismatch">用户名和密码不匹配</string>
    <string name="failed_connection_refused">无法连接到服务器</string>
    <string name="failed_connection_timeout">服务器连接超时</string>
    <string name="failed_bad_return">服务器返回数据异常</string>
    <string name="failed_register_rejected">注册被拒绝</string>
    <string name="failed_unknown">未知错误：%1$s</string>
    <string name="action_accept_good">好的(p≧w≦q)</string>
    <string name="action_accept_bad">好的≧ ﹏ ≦</string>
    <string name="action_ok">好啦φ(゜▽゜*)♪</string>
    <string name="action_cancel">算了算了╮(╯▽╰)╭</string>
    <string name="welcome">你好，%1$s！</string>
    <string name="display_user_id">用户ID：%1$s</string>
    <string name="prompt_depart">出发站</string>
    <string name="direction">Direction</string>
    <string name="prompt_depart_date">出发日期</string>
    <string name="prompt_arrive">到达站</string>
    <string name="prompt_station_keyword">查询关键字（中文、全拼、简拼）</string>
    <string name="date_format">%1$4d-%2$02d-%3$02d</string>
    <string name="invalid_station">请输入正确的车站名</string>
    <string name="invalid_date">请使用日期选择器输入日期（或按YYYY-MM-DD格式输入）</string>
    <string name="action_query_ticket">查询车次</string>
    <string name="forward_desc">to</string>
    <string name="date_and_time">%1$s %2$s</string>
    <string name="failed_query_ticket_no_match">没有找到对应的车次</string>
    <string name="display_num">余%1$d张</string>
    <string name="catalog_and_name">%1$c %2$s</string>
    <string name="title_activity_buy_ticket">购买车票</string>
    <string name="prompt_num">购买数量</string>
    <string name="action_buy">购买</string>
    <string name="minus_desc">减</string>
    <string name="plus_desc">加</string>
    <string name="one">1</string>
    <string name="display_price">￥%1$s</string>
    <string name="invalid_num">至少购买1张</string>
    <string name="failed_buy_ticket_rejected">购买失败，请重试</string>
    <string name="buy_ticket_failed">购买失败</string>
    <string name="buy_ticket_success">购买成功</string>
    <string name="action_refund">退票</string>
    <string name="refund_desc">退票</string>
    <string name="confirm_refund">确认退订以下车票？</string>
    <string name="failed_query_order_no_match">没有查询到您购买的车票</string>
    <string name="display_ordered_num">%1$d张</string>
    <string name="refund_success">退订以下车票成功</string>
    <string name="refund_failed">退订失败</string>
    <string name="failed_refund_rejected">退订失败，请重试</string>
</resources>
