<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_query"
            android:icon="@drawable/baseline_train_black_48"
            android:title="@string/menu_query" />
        <item
            android:id="@+id/nav_ordered"
            android:icon="@drawable/baseline_shopping_cart_black_48"
            android:title="@string/menu_ordered" />
    </group>

    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/baseline_account_circle_black_48"
                android:title="@string/menu_account" />
        </menu>
    </item>

</menu>
